# pipelinesentinel

./: .env.example  .gitignore  DESIGN.md  PROGRESS.md  README.md  pyproject.toml  requirements.txt
cli/: __init__.py  app.py
src/: __init__.py  graph.py  state.py
src/nodes/: __init__.py  ai_ml_packages.py  assess_risk.py  correlate_findings.py  generate_briefing.py  human_review.py  ingest_ghsa.py  ingest_kev.py  ingest_osv.py  parse_dependencies.py
src/prompts/: __init__.py
src/tools/: __init__.py  ai_risk_classifier.py  ghsa_search.py  kev_check.py  npm_versions.py  osv_query.py  pypi_versions.py
src/utils/: retry.py
tests/: test_graph.py
tests/test_nodes/: __init__.py  test_correlate_findings.py  test_parse_dependencies.py
tests/test_tools/: __init__.py  test_ai_risk_classifier.py  test_error_handling.py  test_kev_check.py  test_osv_query.py
web/: package-lock.json  package.json  tailwind.config.js
web/api/: server.py
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: ScanForm.tsx  ScanResults.tsx
