[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipelinesentinel"
version = "0.1.0"
description = "LangGraph AI agent that monitors AI/ML pipeline dependencies for vulnerabilities, correlates AI-specific attack vectors, and generates remediation briefings."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "langgraph>=1.2",
    "langchain>=0.3",
    "langchain-openai>=0.2",
    "langchain-core>=0.3",
    "rich>=13.0",
    "pydantic>=2.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "tomli>=2.0;python_version<'3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "responses>=0.25",
]
web = []
checkpoint = [
    "langgraph-checkpoint-sqlite>=2.0",
]

[project.scripts]
pipelinesentinel = "cli.app:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "cli*"]
